--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
